changes to frontend: fixed bar charts and positioning, made them readable

--- a/main.css
+++ b/main.css
@@ -106,6 +106,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding: 2rem;
 }
 
 .uc{
@@ -535,9 +536,24 @@ option {
   flex-wrap: wrap;
 }
 
+.admin-data-tab2{
+  width: 100%;
+  height: 85%;
+  padding: 2rem;
+}
+
 .admin-data-tab1.active,
 .admin-data-tab2.active {
   display: flex;
+}
+
+.admin-data-tab2 select {
+  background-color: transparent;
+  padding: 0.5rem;
+  color: white;
+  border-radius: 8px;
+  width: fit-content;
+  height: fit-content;
 }
 
 .admin-left{
@@ -605,8 +621,6 @@ option {
   height: 50%;
   margin: auto 0% auto 5%
 }
-
-
 
 .admin-tab1-content4{
   width: 35%;
